--- a/Scanner/View/ScannerView.xaml
+++ b/Scanner/View/ScannerView.xaml
@@ -32,6 +32,7 @@
 
             <Button Grid.Column="1"
                     Command="{Binding DeleteTitulCommand}"
+                    CommandParameter="{Binding ElementName=TitulsListBox,Path=SelectedItem}"
                     Content="Delete"
                     Width="100"
                     Style="{StaticResource MenuButtonTheme}">
@@ -70,7 +71,7 @@
                      SelectedIndex="{Binding SelectedIndexCommand}"
                      x:Name="TitulsListBox"
                      Margin="10, 5"
-                     ItemsSource="{Binding ScannerSourceCollection}">
+                     ItemsSource="{Binding Collection}">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
